# neuro-ide

./: .gitignore  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_FIX.md  CHECK_INFERENCE_OUTPUT.md  DATA_LOADING.md  DISK_SPACE_FIX.md  FIX_SPLITS_COMMAND.md  LICENSE  README.md  RUN_INFERENCE.md  RUN_TRAINING.md  SOLUTION_VAL_TEST_SPLIT.md  TRAINING_SCHEDULE.md  check_data_location.py  clean_disk_space.sh  debug_cell_counts.py  debug_checkpoint_detailed.py  debug_data_loading.py  pyproject.toml  requirements.txt  run_neural_ode_training.sh  setup.py
cli/: train_neural_ode.py
configs/: neural_ode_config.yaml
data/: starter.toml
examples/: neural_ode_example.py  se_st_virtual_cell_challenge.py  simple_train.py
models/: neural_ode_perturbation.py
neuro-IDE/: .gitignore  ADJOINT_FIX_SUMMARY.md  README.md  README_3D_ODE.md  README_TRAINING.md  run_neural_ode_training.sh  test_integrated_system.py  test_neural_ode.py  test_neural_ode_analysis.py  test_perception_layers.py
neuro-IDE/cli/: __init__.py  infer_neural_ode.py  train_neural_ode.py  train_neural_ode_fixed.py
neuro-IDE/configs/: .hydra_structured.yaml  __init__.py  neural_ode_config.yaml
neuro-IDE/data/: __init__.py  perturbation_dataset.py
neuro-IDE/models/: active_perception.py  adaptive_representation.py  base.py  integrated_perception_system.py  neural_ode_perturbation.py  se_st_combined_neural_ode.py  temporal_control.py
neuro-IDE/test_outputs/exported_data/: test_analysis_metrics.txt  test_analysis_time_points.npy  test_analysis_trajectory.npy  test_analysis_velocity_field.npy
neuro-IDE/utils/: README.md  __init__.py  neural_ode_analysis.py  se_inference.py  se_st_utils.py
se_st_combined/: __init__.py
se_st_combined/cli/: infer.py  train.py
se_st_combined/configs/: se_st_combined.yaml
se_st_combined/data/: perturbation_dataset.py
se_st_combined/models/: __init__.py  decoders.py  se_st_combined.py  state_transition.py
se_st_combined/utils/: se_inference.py
se_st_upgrade/cli/: infer.py
se_st_upgrade/data/: perturbation_dataset.py
se_st_upgrade/models/: decoders_nb.py
state/state-main/: se_st_virtual_cell_challenge.py  st_replogle_nadig_training.py  state_for_virtual_cell_challenge.py  use_state_embedding.py
state/state-main/src/state/configs/model/: se_st_combined.yaml
state/state-main/src/state/tx/models/: se_st_combined.py
utils/: neural_ode_analysis.py
