[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "se-st-combined"
dynamic = ["version"]
description = "SE+ST Combined Model for Cross-Cell-Type Perturbation Prediction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "maggie26375", email = "your-email@example.com"},
]
maintainers = [
    {name = "maggie26375", email = "your-email@example.com"},
]
keywords = [
    "single-cell",
    "perturbation",
    "machine-learning",
    "bioinformatics",
    "genomics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "torchaudio>=0.12.0",
    "lightning>=2.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "wandb>=0.13.0",
    "tensorboard>=2.8.0",
    "tqdm>=4.62.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
se-st-train = "se_st_combined.cli.train:main"
se-st-infer = "se_st_combined.cli.infer:main"

[project.urls]
Homepage = "https://github.com/maggie26375/se-st-combined"
Repository = "https://github.com/maggie26375/se-st-combined"
Documentation = "https://github.com/maggie26375/se-st-combined#readme"
"Bug Tracker" = "https://github.com/maggie26375/se-st-combined/issues"

[tool.setuptools]
packages = ["se_st_combined"]

[tool.setuptools.package-data]
se_st_combined = ["configs/*.yaml", "data/*"]

[tool.setuptools_scm]
write_to = "se_st_combined/_version.py"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
